crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@431.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sqrt VALUES (7,'904950020.759072496304165474991957396337281699986101765045213964054286624338102141970514306010139529492299343393832200631760194440206005974547202512275476562767685193838576516154915404389465528270010938533075930081897392863141132529694804621418663424569202655893682412466871297412964570322984865326770090075582481194532433411398133265643849129084449161396724635797324126396071308557057830046688990212282866035593809633839882468628249964862932050189148498591642162462777480125024786829078066012617362076651920045684345679767223337287825546294839320770903419463644110383560050404456170063805115223954191445548226706113970164823214416171441655706141596091717118495955441099867737827763335880891937222647408575142200256804313345924443344596462585960919126827045197885802122062165934504665811115031150357820196176799560314653');"
---
InsertStmt@0..859
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "num_exp_sqrt"
  Whitespace@24..25 " "
  SelectStmt@25..857
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..857
      AConst@33..34
        Iconst@33..34 "7"
      Ascii44@34..35 ","
      AConst@35..857
        Sconst@35..857 "'904950020.7590724963 ..."
  Ascii41@857..858 ")"
  Ascii59@858..859 ";"

