crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@436.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_ln VALUES (0,'NaN');"
---
InsertStmt@0..40
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "num_exp_ln"
  Whitespace@22..23 " "
  SelectStmt@23..38
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..38
      AConst@31..32
        Iconst@31..32 "0"
      Ascii44@32..33 ","
      AConst@33..38
        Sconst@33..38 "'NaN'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

